# ralphcity-ui

./: PROMPT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.agent/: events.jsonl  scratchpad.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-cleanup/: 01-01-PLAN.md  01-01-SUMMARY.md
.planning/phases/02-core-clone/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-RESEARCH.md  02-UAT.md
.planning/phases/03-clone-progress/: 03-01-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-error-handling/: 04-VERIFICATION.md
.planning/phases/05-authentication/: 05-01-SUMMARY.md  05-02-SUMMARY.md  05-RESEARCH.md
.planning/phases/06-repository-manager/: 06-01-PLAN.md  06-01-SUMMARY.md  06-RESEARCH.md
.planning/phases/07-agent-orchestrator-selection/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-RESEARCH.md  07-VERIFICATION.md
.sop/planning/: idea-honing.md  rough-idea.md  summary.md
.sop/planning/design/: detailed-design.md
.sop/planning/implementation/: plan.md
.sop/planning/research/: ralph-cli-integration.md  research-plan.md  rust-technologies.md
backend/: Cargo.toml
backend/src/: assets.rs  error.rs  main.rs
backend/src/api/: mod.rs  repos.rs  service.rs  sessions.rs
backend/src/db/: mod.rs  schema.rs
backend/src/git/: mod.rs
backend/src/ralph/: mod.rs
backend/src/service/: mod.rs
src/: index.css
src/data/: mockData.ts
src/pages/: Index.tsx
src/types/: gastown.ts  ralphtown.ts
(+25 files in other folders)
