[package]
name = "ralphtown"
version = "0.1.0"
edition = "2024"
description = "Backend server for Ralphtown - a Ralph session manager"
authors = ["Ralph"]
license = "MIT"

[[bin]]
name = "ralphtown"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.33", features = ["bundled"] }
dirs = "6"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
git2 = "0.20"
futures = "0.3"
async-stream = "0.3"
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
clap = { version = "4", features = ["derive"] }
service-manager = "0.10"
rust-embed = "8"
mime_guess = "2"
which = "7"

[dev-dependencies]
futures-util = "0.3"
axum-test = "18"
tempfile = "3"
